with updated CORS for use with react-goa-cellar example
