# public/swagger/swagger.yaml
@@ -839,27 +839,6 @@ paths:
       summary: watch bottle
       tags:
       - bottle
-  /js/{filepath}:
-    get:
-      operationId: js#/js/*filepath
-      parameters:
-      - description: Relative file path
-        in: path
-        name: filepath
-        required: true
-        type: string
-      responses:
-        "200":
-          description: File downloaded
-          schema:
-            type: file
-        "404":
-          description: File not found
-          schema:
-            $ref: '#/definitions/error'
-      schemes:
-      - http
-      summary: Download public/js
   /swagger.json:
     get:
       operationId: swagger#/swagger.json
@@ -871,17 +850,6 @@ paths:
       schemes:
       - http
       summary: Download public/swagger/swagger.json
-  /ui:
-    get:
-      operationId: public#/ui
-      responses:
-        "200":
-          description: File downloaded
-          schema:
-            type: file
-      schemes:
-      - http
-      summary: Download public/html/index.html
 produces:
 - application/json
 - application/xml
